--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </div>
             <div class="text-end">
                 <div id="update-time" style="font-size: 0.9rem; opacity: 0.9;">更新中...</div>
-                <small style="opacity: 0.7; font-size: 0.75rem;">Source: GitHub</small>
+                <small style="opacity: 0.7; font-size: 0.75rem;"></small>
             </div>
         </div>
 
