--- a/index.html
+++ b/index.html
@@ -54,8 +54,6 @@
         .table th { background-color: #f8f9fa; color: #777; font-weight: 600; font-size: 0.9rem; }
         .table td { vertical-align: middle; font-size: 0.95rem; }
         .item-id { font-family: monospace; font-weight: bold; font-size: 1rem; color: #0d6efd; }
-        
-        /* 異常文字樣式 */
         .issue-text { color: #dc3545; font-weight: bold; font-size: 0.9rem; }
     </style>
 </head>
@@ -152,7 +150,7 @@
                     vendor: item.vendor || "-",
                     name: item.name || "未知品項",
                     status: status,
-                    issue: item.issue || "" // 異常狀況內容
+                    issue: item.issue || ""
                 };
 
                 if (type.includes("原料")) {
@@ -164,8 +162,9 @@
                 }
             });
 
-            renderAccordion('accordionRaw', rawDataMap, '原料');
-            renderAccordion('accordionFinished', finishedDataMap, '成品');
+            // ⚠️ 這裡就是修改的重點：傳入特定的日期標籤
+            renderAccordion('accordionRaw', rawDataMap, '原料', '入貨日');
+            renderAccordion('accordionFinished', finishedDataMap, '成品', '製造日');
 
             enableSearch();
 
@@ -173,7 +172,8 @@
             document.getElementById('main-content').style.display = 'block';
         }
 
-        function renderAccordion(elementId, dataMap, label) {
+        // ⚠️ 新增了一個參數 datePrefix
+        function renderAccordion(elementId, dataMap, label, datePrefix) {
             const container = document.getElementById(elementId);
             const sortedDates = Object.keys(dataMap).sort().reverse(); 
 
@@ -186,6 +186,7 @@
             sortedDates.forEach((date, index) => {
                 let items = dataMap[date];
                 
+                // 預設全收合
                 let collapseClass = "collapse"; 
                 let buttonClass = "accordion-button collapsed";
                 let countBadge = `<span class="badge bg-secondary ms-2 rounded-pill">${items.length} 筆</span>`;
@@ -196,7 +197,6 @@
                     if (s.includes("合格") && !s.includes("不合格")) badgeClass = "bg-pass";
                     if (s.includes("不合格")) badgeClass = "bg-fail";
 
-                    // 處理異常文字顯示
                     let issueDisplay = item.issue ? `<span class="issue-text">${item.issue}</span>` : "";
 
                     return `
@@ -205,15 +205,17 @@
                             <td class="d-none d-sm-table-cell">${item.vendor}</td>
                             <td>${item.name}</td>
                             <td class="text-center"><span class="status-badge ${badgeClass}">${s}</span></td>
-                            <td>${issueDisplay}</td> </tr>
+                            <td>${issueDisplay}</td>
+                        </tr>
                     `;
                 }).join("");
 
+                // ⚠️ 標題顯示邏輯：📅 [入貨日]: 2025-11-21
                 html += `
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="heading-${elementId}-${index}">
                             <button class="${buttonClass}" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-${elementId}-${index}">
-                                📅 ${date} ${countBadge}
+                                📅 ${datePrefix}: ${date} ${countBadge}
                             </button>
                         </h2>
                         <div id="collapse-${elementId}-${index}" class="accordion-collapse ${collapseClass}" data-bs-parent="#${elementId}">
@@ -225,7 +227,8 @@
                                             <th width="20%" class="d-none d-sm-table-cell">廠商</th>
                                             <th width="25%">品名</th>
                                             <th width="15%" class="text-center">判定</th>
-                                            <th width="25%">異常狀況</th> </tr>
+                                            <th width="25%">異常狀況</th>
+                                        </tr>
                                     </thead>
                                     <tbody>${rows}</tbody>
                                 </table>
